Changed the 0 cases etc handling, wrote the about and help page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
     {{>nav}}
     <section class="main">
         <h1>About The App</h1>
+        <p>This web app was made by the creator for practicing web servers. You can also use this app for getting the recent update of the covid situation around the world. More features will be added soon!</p>
     </section>
 </body>
 <footer>
