--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -7,6 +7,9 @@
     {{>nav}}
     <section class="main">
         <h1>Help Page</h1>
+        <p>Here are some guidelines on how to use the app:</p>
+        <p>Enter a location of a <b>country</b> in the search bar and that's it!</p>
+        <p>Do not type <i>!!</i> or any other special characters, it will show an invalid location</p>
     </section>
 </body>
 <footer>
