--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="/home">CovidUpdate</a>
+    <a class="navbar-brand" href="/">CovidUpdate</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
