--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -22,6 +22,9 @@
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
+        <div class="country-flag" style="display: none;">
+             <img id="flag" src="" alt="">
+        </div>
         <div class="covid-holder" style="display: none;">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
